--- a/contracts/asserter/Cargo.toml
+++ b/contracts/asserter/Cargo.toml
@@ -20,19 +20,11 @@ backtraces = ["cosmwasm-std/backtraces"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# cosmwasm-schema = "1.1.4"
+cosmwasm-schema = { version = "1.1.0" }
 cosmwasm-std = { version = "1.1.4", features = ["iterator"] }
-# cosmwasm-storage = "1.0.0"
-# cw-storage-plus = "0.15.1"
-# cw2 = "0.15.1"
-# cw20 = "0.15.1"
-# cw20-base = { version = "0.15.1", features = ["library"] }
-# cw-controllers = "0.13.2"
-# protobuf = { version = "3.1.0", features = ["with-bytes"] }
+cw-storage-plus = "1.0.1"
 schemars = "0.8.3"
-# semver = "1.0.12"
 serde = { version = "1.0.137", default-features = false, features = ["derive"] }
 thiserror = "1.0.21"
-# base64 = "0.21.0"
-# dict = "0.1.5"
 serde_json = "1.0.94"
+cw-multi-test = "0.16.4"
