--- a/contracts/asserter/Cargo.toml
+++ b/contracts/asserter/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "asserter"
+name    = "asserter"
 version = "0.0.1"
 edition = "2021"
 
@@ -21,10 +21,11 @@ backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
 cosmwasm-schema = { version = "1.1.0" }
-cosmwasm-std = { version = "1.1.4", features = ["iterator"] }
+cosmwasm-std    = { version = "1.1.4", features = ["iterator"] }
 cw-storage-plus = "1.0.1"
-schemars = "0.8.3"
-serde = { version = "1.0.137", default-features = false, features = ["derive"] }
-thiserror = "1.0.21"
-serde_json = "1.0.94"
-cw-multi-test = "0.16.4"
+schemars        = "0.8.3"
+serde           = { version = "1.0.137", default-features = false, features = ["derive"] }
+thiserror       = "1.0.21"
+serde_json      = "1.0.94"
+cw-multi-test   = "0.16.4"
+rhaki-cw-plus   = "0.6.9"
