--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,27 @@
-[workspace]
+[package]
+name            = "asserter"
+version         = "0.2.0"
+edition         = "2021"
 
-members = [
-	"contracts/*",
-	# "packages/*",
-]
+exclude         = ["contract.wasm", "hash.txt"]
 
-[profile.release]
-opt-level = 3
-debug = false
-rpath = false
-lto = true
-debug-assertions = false
-codegen-units = 1
-panic = 'abort'
-incremental = false
-overflow-checks = true
+[lib]
+crate-type      = ["cdylib", "rlib"]
+
+[features]
+backtraces      = ["cosmwasm-std/backtraces"]
+
+
+[dependencies]
+cw-storage-plus = { version = "1.1.0"   }
+cosmwasm-std    = { version = "1.1.0", features = ["cosmwasm_1_2"]}
+cosmwasm-schema = { version = "1.1.0"   }
+schemars        = { version = "0.8.3"   }
+# serde           = { version = "1.0.137", default-features = false, features = ["derive"] }
+thiserror       = { version = "1.0.21"  }
+serde_json      = { version = "1.0.104" }
+rhaki-cw-plus   = { version = "0.6.9"   }
+
+[dev-dependencies]
+cw-multi-test   = { version = "0.16.5"  }
+
